--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
-    <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
-    <script src="https://unpkg.com/element-ui@2.3.6/lib/index.js"></script>
+    <!--<script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>-->
+    <!--<script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>-->
+    <!--<script src="https://unpkg.com/element-ui@2.3.6/lib/index.js"></script>-->
   </body>
 </html>
