--- a/public/qiyu.html
+++ b/public/qiyu.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>酷开智能客服系统</title>
+    <title>七鱼客服平台</title>
     <script type="text/javascript">
-      let dashboard = "coocaa";
+      let dashboard = "qiyu";
     </script>
   </head>
   <body>
